Tests/Negative/NewUndefinedType.mr
fun main(): i32 {
    var p: UnknownType = new UnknownType; // Error: Unknown type
    return 0;
}
